--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.12.1",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
+    "process": "^0.11.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
