--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.3.2",
     "@mui/x-data-grid": "^8.11.2",
     "@reduxjs/toolkit": "^2.9.0",
+    "@types/react-image-crop": "^9.0.2",
     "axios": "^1.12.1",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
@@ -24,6 +25,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-image-crop": "^11.0.10",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.0",
     "yup": "^1.7.0"
